--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
     background: white;
     text-align: center;
     border: 1px solid lime;
+    white-space: nowrap;
 }
 
 /* SECTIONS BG and PADDINGS */
