--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,59 @@
-/* GENERAL */
+/* CUSTOM MODS --------------------------------------------*/
 
-/* BOX SIMULATION */
+/* HEADER-NAVIGATION --------------------------------------*/
+
+.navbar-custom {
+    background-color: #2c3e50;
+    border-color: transparent;
+    border-radius: 0%;
+}
+
+.text-white {
+    color: white;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .box {
     margin-top: 10px;
