--- a/css/style.css
+++ b/css/style.css
@@ -2,17 +2,37 @@
 
 /* HEADER-NAVIGATION --------------------------------------*/
 
+.navbar-padding {
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
 .navbar-custom {
     background-color: #2c3e50;
     border-color: transparent;
     border-radius: 0%;
 }
-
-.text-white {
+.navbar-header .hover-none:hover {
     color: white;
 }
 
+.navbar-default .text-white {
+    color: white;
+}
 
+.navbar-default .text-white>li>a {
+    color: white;
+}
+
+.text-size-left {
+    font-size: 30px;
+    font-weight: 600;
+}
+
+.text-size-right {
+    font-size: 18px;
+    font-weight: 500;
+}
 
 
 
