--- a/css/style.css
+++ b/css/style.css
@@ -260,7 +260,8 @@ textarea {
 
 .site-info h3 {
     text-transform: uppercase;
-    font-size: 30px;
+    font-weight: 600;
+    font-size: 22px;
 }
 
 .site-info p {
@@ -271,20 +272,38 @@ textarea {
     padding: 0;
 }
 
+.social-icons a {
+    color: white;
+}
+
 .site-info .social-icons li {
     display: inline-block;
     border: 1px solid white;
     border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    font-size: 20px;
-    padding: 20px;
-    margin-right: 10px;
+    width: 45px;
+    height: 45px;
+    font-size: 18px;
+    margin-right: 5px;
+    line-height:45px;
+    transition: .3s;
 } 
 
+.social-icons li:hover {
+    background-color: dodgerblue;
+}
 
 .site-info .freelancer p span {
     color: #18b495;
 }
 
+/* FOOTER COPYRIGHT */
 
+footer {
+    background-color: #2c3e50;
+}
+
+footer h5 {
+    text-align: center;
+    color: white;
+    padding: 40px;
+}
